Allow gesture-nav regardless of touchscreen availability

Previously, gesture-nav (overscroll history navigation) was enabled on
Windows only when the device had touchscreen. The reasoning behind this
was that devices normally didn't have precision touchpad, so gesture-nav
was only useful with touchscreen devices. Moreover, gesture-nav used to
take a screenshot on each page navigation which is costly. To avoid this
unnecessary cost when the feature is not useful, gesture-nav was
disabled when there was no touchscreen. However, this has changed as
there are more Windows devices with precision touchpad that can benefit
from this feature and no screenshot is taken on page navigations
anymore. It makes sense now to remove this restriction.

BUG=901593

Change-Id: I791dec022771d960a96efbb376ea90779c7a064c
Reviewed-on: https://chromium-review.googlesource.com/c/1387826
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618573}
Former-commit-id: 2e1ffbb1207316f0647bf69bc7888ab9e1a83f5e